--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.2",
-    "nodemailer": "^6.10.0",
-    "twilio": "^5.4.5"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0"
   }
 }
